istio/authorization-policy/vets-allow-gw.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: vets-allow-gw
  namespace: dev
spec:
  selector:
    matchLabels:
      app: vets-service
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/dev/sa/api-gateway
